Fix handling of specified widths on column-spanning cells.  b=363874  r=bernd  sr=roc